SEARCH BAR     -Add new directive that focuses an element when a given variable is true.     -Modify list results functionality.  no longer disappears when losing focus.     -Fixed white bar appearing on firefox.

--- a/css/production.css
+++ b/css/production.css
@@ -218,20 +218,10 @@ center {
 }
 
 #searchResults {
-	background: white;
+	background: transparent;
 	z-index: 999;
-
 }
 
-#nottalink {
-	position: absolute;
-	left: -9999px;
-}
-
-#nottalink:focus {
-	background: orange;
-}
-ƒs
 #listView {}
 	#listView ul {
 
